--- a/www/css/style.css
+++ b/www/css/style.css
@@ -10,6 +10,7 @@ body {
 	border-radius: 75px 75px 0px 0px;
 	border-color: #3a4f19;
 	min-height: 680px;
+	font-family: 'Arima Madurai', cursive;
 }
 
 
@@ -23,12 +24,43 @@ header {
 	background-color: #c9c2a1;
 	border-color: #775c39;
 	border-radius: 75px 75px 0px 0px;
-	
+	font-family: 'Great Vibes', cursive;
 }
 
 h1 {
-	font-family: 'Great Vibes', cursive;
 	letter-spacing: 3px;
 	font-size: 40px;
+	color: #2a3b0f;
+}
+
+nav {
+	margin: auto;
+	height: 50px;
+	text-align: center;
+}
+nav ul {
+    list-style-type: none; /* Remove bullets. */
+    margin: 20px;
+
+}
+
+nav ul li {
+    display: inline-block;
+    padding-left: 30px;
+	padding-right: 30px;
+}
+
+nav ul li a {
+    display: block; 
+    padding: 5px;
+    text-decoration: none;
+    font-size: 25px;
+	color: #f1ffdb;
+    text-transform: capitalize;
+}
+
+nav ul li a:hover {
+    background-color: #c9c2a1;
+    text-decoration: none;
 	color: #2a3b0f;
 }
