js and css corrections

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -82,11 +82,28 @@ footer {
 	height: 50px;
 }
 
+h2 {
+    font-family: 'Arima Madurai', cursive;
+    font-size: 25px;
+}
+
+table.speciesTable header {
+    width: 175px;
+    float: left;
+    margin: 5px;
+}
+
+table tr {
+    width: 175px;
+    float: left;
+    margin: 5x;
+}
+
 table.speciesTable{
  	margin: 25px 10px 25px 10px;
- 	width: 250px;
- 	float: left;
+
  	text-align: center;
+ 	float: left;
  }
 
 table.speciesTable, table.speciesTable tr, table.speciesTable td, table.speciesTable th {
@@ -96,15 +113,16 @@ table.speciesTable, table.speciesTable tr, table.speciesTable td, table.speciesT
     border-color: #2e3327;
 }
 
- table.speciesTable td, table.speciesTable th {
+ table.speciesTable td, table.speciesTable th, table.speciesTable th {
      padding: 15px;
+
  }
 
 
 table.nestTable{
     padding: 0px;
  	margin: auto;
- 	width: 250px;
+
  }
 
  table.nestTable, table.nestTable tr, table.nestTable td, table.nestTable th {
