--- a/www/css/fontello.css
+++ b/www/css/fontello.css
@@ -56,3 +56,8 @@
 }
  
 .icon-tree-2:before { content: '\e83f'; font-size: 40px; padding-left: 10px; padding-right: 10px} /* '' */
+.icon-tree-2:hover { 
+	color: #EBE7D5; 
+	transition: all .5s ease-in-out;
+	text-shadow: 20px 10px 19px rgba(42,59,15,0.3);	
+}
