column add hover css

--- a/www/css/fontello.css
+++ b/www/css/fontello.css
@@ -59,5 +59,6 @@
 .icon-tree-2:hover { 
 	color: #EBE7D5; 
 	transition: all .5s ease-in-out;
-	text-shadow: 20px 10px 19px rgba(42,59,15,0.3);	
+	text-shadow: 20px 10px 19px rgba(42,59,15,0.3);
+	cursor: pointer;
 }
