--- a/www/css/style.css
+++ b/www/css/style.css
@@ -80,7 +80,7 @@ section {
 	text-align: center;
 }
 
-div.userList {
+#userList {
 	width: 150px;
 	min-height: 300px;
 	margin: 0px 35px 20px 35px;
