--- a/www/css/style.css
+++ b/www/css/style.css
@@ -21,7 +21,7 @@ header {
 	text-align: center;
 	text-margin: auto;
 	padding: 5px;
-	background-color: #63C132;
+	background-color: #E0DAAC;
 	border-color: #FDE74C;
 	border-radius: 50px 50px 0px 0px;
 	font-family: 'Great Vibes', cursive;
@@ -35,6 +35,11 @@ h1 {
 	letter-spacing: 3px;
 	font-size: 40px;
 	color: #03440C;
+}
+
+h2 {
+	
+	
 }
 
 nav {
@@ -83,7 +88,7 @@ section {
 #aside {
 	width: 150px;
 	min-height: 350px;
-	margin: 0px 35px 20px 35px;
+	margin: 0px 25px 20px 30px;
 	float: left;
 	background-color: #E0DAAC;
 	border: 2px solid #423629;
@@ -116,6 +121,19 @@ section {
 	display: block;
 	text-decoration: none;
 	border-bottom: 2px dotted #423629;
+}
+
+#userList li:hover {
+    background-color: #C12D2A;
+	text-decoration: none;
+	color: #FDE74C;
+	border-bottom: 2px dotted #E0DAAC;
+	cursor: pointer;
+	-moz-transform: scale(0.98);
+	-webkit-transform: scale(0.98);
+	-o-transform: scale(0.98);
+	-ms-transform: scale(0.98);
+	transform: scale(0.98);
 }	
 
 
@@ -148,7 +166,7 @@ footer {
 
 table.entsTable {
     text-align: center;
-    margin: 20px 20px 20px 0px;
+    margin: 20px 30px 20px 0px;
 	min-width: 700px;
 	min-height: 300px;
 	font-size: 18px;
@@ -202,4 +220,88 @@ table.entsTable input {
 	cursor: pointer;
 }
 
+#contactContainer {
+	background-color: #c9c2a1;
+	text-align: center;
+    margin: 20px auto 20px auto;
+	width: 500px;
+	height: 400px;
+	font-size: 18px;
+}
+
+#formHeader {
+	margin: auto;
+	background-color: #298612;
+	color: #03440C;
+	border-color: #63C132;
+	border-bottom: 4px solid #423629;
+	font-weight: 700;
+	height: 40px;
+	text-align: center;
+	padding-top: 10px;
+	font-size: 20px;
+	border-radius: 2px;
+	font-family: 'Arima Madurai', cursive;
+}
+
+#contactForm {
+	text-align: center;
+    margin: 20px auto auto auto;
+	width: 500px;
+	height: 300px;
+}
+
+#fields {
+	margin: auto;
+	width: 450px;
+	height: 280px;
+}
+
+.label {
+    float: left;
+	margin: 10px;
+	width: 150px;
+	border: 1px solid black;
+	height: 30px;
+}
+
+form input, form select {
+    /*background-color: tomato;*/
+    border: 1px solid;
+}
+
+form input[type=reset]:hover, form input[type=submit]:hover {
+    background-color: chocolate;
+}
+
+
+
+input {
+	float: left;
+	margin: 10px;
+	width: 200px;
+	border: 1px solid black;
+	height: 30px;
+}
+
+input[type="radio"]{
+	width: 10px;
+	height: 30px;
+}
+
+select {
+	float: left;
+	margin: 10px;
+	width: 200px;
+	border: 1px solid black;
+	height: 30px;
+	font-family: 'Arima Madurai', cursive;
+}
+
+span.delivery {
+	float: left;
+	margin-top: 10px;
+	height: 30px;
+	/*border: 1px solid black;*/
+}
 
