--- a/www/css/style.css
+++ b/www/css/style.css
@@ -6,9 +6,9 @@ body {
 }
 
 #solid_background {
-	background-color: #423629;
-	border-radius: 50px 50px 0px 0px;
-	border-color: 423629;
+	background-color: #131C1A;
+	border-radius: 10px 10px 0px 0px;
+	border-color: #002E19;
 	min-height: 600px;
 	font-family: 'Arima Madurai', cursive;
 }
@@ -21,9 +21,9 @@ header {
 	text-align: center;
 	text-margin: auto;
 	padding: 5px;
-	background-color: #E0DAAC;
+	background-color: #159F63;
 	border-color: #FDE74C;
-	border-radius: 50px 50px 0px 0px;
+	border-radius: 10px 10px 0px 0px;
 	font-family: 'Great Vibes', cursive;
 }
 
@@ -34,7 +34,7 @@ header a {
 h1 {
 	letter-spacing: 3px;
 	font-size: 40px;
-	color: #03440C;
+	color: #321F36;
 }
 
 h2 {
@@ -64,7 +64,7 @@ nav ul li a {
     padding: 5px;
     text-decoration: none;
     font-size: 25px;
-	color: #63C132;
+	color: #CFB985;
     text-transform: capitalize;
 }
 
@@ -90,17 +90,17 @@ section {
 	min-height: 350px;
 	margin: 0px 25px 20px 30px;
 	float: left;
-	background-color: #E0DAAC;
-	border: 2px solid #423629;
+	background-color: #92AEA2;
+	border: 2px solid #16211F;
 	border-radius: 5px;
 
 }
 
 #listHeader {
-	background-color: #298612;
-	color: #03440C;
+	background-color: #035230;
+	color: #060807;
 	border-color: #63C132;
-	border-bottom: 4px solid #423629;
+	border-bottom: 4px solid #16211F;
 	font-weight: 700;
 	height: 40px;
 	text-align: center;
@@ -120,11 +120,11 @@ section {
 #userList li {
 	display: block;
 	text-decoration: none;
-	border-bottom: 2px dotted #423629;
+	border-bottom: 2px dotted #16211F;
 }
 
 #userList li:hover {
-    background-color: #C12D2A;
+    background-color: #E5AF24;
 	text-decoration: none;
 	color: #FDE74C;
 	border-bottom: 2px dotted #E0DAAC;
@@ -145,15 +145,15 @@ h4 {
 footer {
     clear: both;
 	text-align: center;
-	color: #E0DAAC;
+	color: #060807;;
 	height: 50px;
-	background-color: #1B140D;
+	background-color: #035230;
 }
 
 #title {
-	background-color: #298612;
-	color: #03440C;
-	border: 2px solid #423629;
+	background-color: #035230;
+	color: #060807;
+	border: 2px solid #16211F;
 	font-weight: 700;
 	height: 40px;
 	text-align: center;
@@ -174,10 +174,13 @@ table.entsTable {
 
 table.entsTable th, table.entsTable td {
 	width: 100px;
+	color: #FDE74C;
+    text-decoration: none;
+    color: #060807;
 }
 
 table.entsTable, table.entsTable tr, table.entsTable th, table.entsTable td {
-    border: 2px solid #423629;
+    border: 2px solid #16211F;
 	border-radius: 2px;
 }
 
@@ -190,15 +193,11 @@ table.entsTable, table.entsTable tr, table.entsTable th, table.entsTable td {
 }
 
 table.entsTable th {
-    background-color: #FDE74C;
-	text-decoration: none;
-	color: #423629;
+    background-color: #E5AF24;
 }
 
 table.entsTable td {
-    background-color: #E0DAAC;
-	text-decoration: none;
-	color: #1E1C14;
+    background-color: #92AEA2;
 }
 
 table.entsTable td.button:hover {
@@ -234,7 +233,7 @@ table.entsTable input {
 	background-color: #298612;
 	color: #03440C;
 	border-color: #63C132;
-	border-bottom: 4px solid #423629;
+	border-bottom: 4px solid #16211F;
 	font-weight: 700;
 	height: 40px;
 	text-align: center;
@@ -261,7 +260,7 @@ table.entsTable input {
     float: left;
 	margin: 10px;
 	width: 200px;
-	border: 1px solid black;
+	border: 1px solid #16211F;
 	height: 30px;
 }
 
