--- a/www/css/style.css
+++ b/www/css/style.css
@@ -7,7 +7,7 @@ body {
 
 #solid_background {
 	background-color: #01060A;
-	border-radius: 10px 10px 0px 0px;
+	border-radius: 5px 10px 0px 0px;
 	border-color: #01060A;
 	min-height: 600px;
 	font-family: 'Arima Madurai', cursive;
@@ -22,7 +22,7 @@ header {
 	padding: 5px;
 	background-color: #047831;
 	border-color: #C77318;
-	border-radius: 10px 10px 0px 0px;
+	border-radius: 5px 10px 0px 0px;
 	font-family: 'Great Vibes', cursive;
 }
 
@@ -36,10 +36,6 @@ h1 {
 	color: #101111;
 }
 
-h2 {
-	
-	
-}
 
 nav {
 	margin: auto;
@@ -80,7 +76,7 @@ nav ul li a:hover {
 }
 
 section {
-	min-height: 400px;
+	min-height: 350px;
 	text-align: center;
 }
 
@@ -223,7 +219,7 @@ table.entsTable input {
 	text-align: center;
     margin: 20px auto 20px auto;
 	width: 500px;
-	height: 400px;
+	height: 300px;
 	font-size: 18px;
 	background-color: #A2B2AF;
 	border: 2px solid #01060A;
@@ -248,43 +244,49 @@ table.entsTable input {
 
 #contactForm {
 	text-align: center;
-    margin: 20px auto auto auto;
+    margin: 5px auto auto auto;
 	width: 500px;
-	height: 300px;
-	
+	height: 290px;
+	background-color: #A2B2AF;
 }
 
 #fields {
 	margin: auto;
 	width: 450px;
-	height: 280px;
+	height: 240px;
 	border: 2px solid #86044B;
 }
 
 .label {
     float: left;
-	margin: 10px;
+	margin: 8px;
 	width: 200px;
 	border-bottom: 1px solid #A11361;
-	height: 30px;
+	height: 25px;
 	color: #A11361;
 	font-weight: 600;
 }
 
 
-form input[type=reset], form input[type=submit] {
-	width: 200px;
+form input[type=submit] {
 	font-size: 18px;
+	background-color: #B8317B;
+	color:#B7C9C6;
+}
+
+form input[type=reset] {
+	font-size: 18px;
+	background-color: #B7C9C6;
 }
 
 
 input {
 	float: left;
-	margin: 10px;
+	margin: 8px;
 	width: 200px;
 	border: 1px solid #101111;
 	border-radius: 2px;
-	height: 30px;
+	height: 25px;
 	background-color: #B9CCC8;
 	text-align: center;
 	font-family: 'Arima Madurai', cursive;
@@ -345,5 +347,36 @@ select:hover{
 	transform: scale(0.98);
 }
 
+#dataContainer {
+	text-align: center;
+    margin: 20px auto 20px auto;
+	width: 500px;
+	height: 250px;
+	font-size: 18px;
+	background-color: #A2B2AF;
+	border: 2px solid #01060A;
+	border-radius: 5px;
+}
 
+#userInfo {
+	text-align: center;
+    margin: 20px auto 20px auto;
+	width: 300px;
+	height: 150px;
+	font-size: 18px;
+	background-color: #A2B2AF;
+	border-radius: 5px;
+}
 
+#userInfo {
+	list-style-type: none;
+	margin: auto;
+	padding: 10px;
+}
+
+#userInfo li {
+	display: block;
+	text-decoration: none;
+	border-bottom: 1px solid #86044B;
+	letter-spacing: 2px;
+}
