--- a/www/css/style.css
+++ b/www/css/style.css
@@ -380,3 +380,13 @@ select:hover{
 	border-bottom: 1px solid #86044B;
 	letter-spacing: 2px;
 }
+#banner{
+	width: 560px;
+	height: 360px;
+	margin: 20px auto 0px auto;
+}
+
+img {
+	border: 2px solid #01060A;
+	border-radius: 2px;
+}
